--- a/gabung/versi/v6.html
+++ b/gabung/versi/v6.html
@@ -7,51 +7,32 @@
 <style>
   body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-inline:auto; background-color:#fffef9; }
   h1,h2,h3 { color:#b36b00; text-align:center; }
-  h1 { font-size:1.6rem; margin-bottom:5px; }
-  h2 { font-size:1.2rem; margin-bottom:10px; }
   textarea, select { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
   textarea { height:150px; }
   #output { display:none; margin-top:10px; background:#fff; border-radius:8px; border:1px solid #ffd42a; padding:10px 15px; box-shadow:0 0 8px rgba(255,212,42,0.2);}
-  .link-item {
-    display:flex; justify-content:space-between; align-items:center;
-    background:#fffbec; padding:8px 10px; border-bottom:1px dashed #ffd42a;
-    border-radius:5px; margin-bottom:6px;
-  }
+  .link-item { display:flex; justify-content:space-between; align-items:center; background:#fffbec; padding:8px 10px; border-bottom:1px dashed #ffd42a; border-radius:5px; margin-bottom:6px; }
+  .link-item.habis { background:#ffe5e5; }
   .link-item a.link { color:#0066cc; text-decoration:none; word-break:break-all; flex:1; }
   .link-item a.link:hover { text-decoration:underline; }
   .link-item a.report { color:#cc0000; text-decoration:none; font-weight:bold; margin-left:10px; white-space:nowrap; }
-  .link-item a.report:hover { text-decoration:underline; }
   .pagination { margin-top:15px; text-align:center; display:flex; flex-wrap:wrap; gap:6px; justify-content:center; }
-  .page-btn { padding:10px 14px; cursor:pointer; border:1px solid #ccc; border-radius:6px; background:white; font-size:1rem; min-width:40px; }
+  .page-btn { padding:10px 14px; cursor:pointer; border:1px solid #ccc; border-radius:6px; background-color:white; font-size:1rem; }
   .page-btn:hover { background-color:#ffd42a; color:#b36b00; }
   .active { font-weight:bold; background-color:#ffd42a; color:#b36b00; border-color:#b36b00; }
   #copyBtn { margin-top:12px; padding:12px; font-size:1rem; cursor:pointer; border:none; background-color:#ffd42a; color:#b36b00; border-radius:6px; width:100%; }
   #copyBtn:hover { background-color:#e6c72b; }
   .input-buttons { display:flex; gap:8px; margin-top:6px; flex-wrap:wrap; }
   .input-buttons button { flex:1; padding:10px; font-size:0.95rem; cursor:pointer; border:1px solid #ccc; border-radius:6px; background:#f5f5f5; }
-  .input-buttons button:hover { background:#eee; }
   #stats { margin:15px 0; font-weight:bold; font-size:1rem; white-space:pre-line; }
-  .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
+  .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; }
   footer { text-align:center; margin-top:25px; font-size:0.9rem; color:#888; }
-  .backup-area { margin-top:25px; padding:12px; background:#fffbe6; border-radius:8px; border:1px solid #ffd42a; text-align:center; }
-  #toast {
-    position: fixed; bottom: 25px; right: 25px; background: #333; color: #fff;
-    padding: 12px 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    opacity: 0; transform: translateY(20px); transition: opacity 0.4s, transform 0.4s;
-    z-index: 9999; max-width: 320px; white-space: pre-line; line-height:1.3; font-size:0.95rem;
-  }
-  @media (max-width:720px){ body { padding:12px; } textarea{ height:120px; } }
-  @media (max-width:480px){
-    h1,h2,h3{ font-size:1rem; } textarea{ height:120px; font-size:0.9rem; }
-    #output{ font-size:0.85rem; } .page-btn{ padding:8px 12px; font-size:0.9rem; }
-    #copyBtn{ font-size:0.95rem; } .input-buttons{ flex-direction:column; } .input-buttons button{ flex:unset; width:100%; }
-  }
+  #toast { position: fixed; bottom: 25px; right: 25px; background: #333; color: #fff; padding: 12px 20px; border-radius: 8px; box-shadow:0 2px 10px rgba(0,0,0,0.3); opacity:0; transform:translateY(20px); transition:opacity .4s,transform .4s; z-index:9999; }
 </style>
 </head>
 <body>
 
 <h1>Produk Live MadGazan 8 November 2025</h1>
-<h2>Manajemen Shopee Live V8</h2>
+<h2>Manajemen Shopee Live V7</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
@@ -62,12 +43,12 @@
   <button id="sortirPerTokoBtn">Sortir Berdasarkan Toko</button>
 </div>
 
-<!-- 🆕 AREA PRODUK HABIS -->
-<h3>Daftar Produk Habis</h3>
-<textarea id="produkHabis" placeholder="Masukkan link produk habis, satu per baris..."></textarea>
+<!-- ✅ Input Produk Habis -->
+<h3>Produk Habis</h3>
+<textarea id="inputHabis" placeholder="Masukkan link produk habis, satu per baris..."></textarea>
 <div class="input-buttons">
-  <button id="hapusProdukHabisBtn" style="background:#ffd0d0; border-color:#cc0000;">🚫 Filter Produk Habis dari Daftar</button>
-  <button id="clearProdukHabisBtn">Clear Produk Habis</button>
+  <button id="updateHabisBtn">Filter Produk Habis</button>
+  <button id="clearHabisBtn">Clear Produk Habis</button>
 </div>
 
 <h3>Daftar File TXT Produk</h3>
@@ -84,9 +65,7 @@
   <button id="ambilFileListLinksBtn">Download Terbaru Masal</button>
 </div>
 
-<div class="sponsor">
-  Disponsori oleh <strong>MadGazan Studio</strong><br>
-</div>
+<div class="sponsor">Disponsori oleh <strong>MadGazan Studio</strong></div>
 
 <div id="stats"></div>
 
@@ -96,143 +75,138 @@
 
 <div class="pagination" id="pagination"></div>
 
-<div class="backup-area">
-  <h3>🔒 Backup & Import Data</h3>
-  <div class="input-buttons">
-    <button onclick="exportLocalStorage()">Backup Data ke File</button>
-    <input type="file" id="importFile" accept=".json">
-    <button onclick="importLocalStorage()">Import Data</button>
-  </div>
-  <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
-  <button id="syncAllBtn" style="margin-top:15px; background:#d0ffd0; border-color:#00aa00;">🔄 Sinkron Semua File TXT</button>
-</div>
-
-<footer>
-  © 2025 MadGazan Studio — Semua Hak Dilindungi
-</footer>
+<footer>© 2025 MadGazan Studio — Semua Hak Dilindungi</footer>
 
 <div id="toast"></div>
 
 <script>
 const MAX_PER_PAGE = 99;
-let allPages = [];
+let allPages = [], habisPages = [];
 let currentPage = 1;
+let habisLinks = [];
+
 const inputLinksEl = document.getElementById('inputLinks');
+const inputHabisEl = document.getElementById('inputHabis');
 const statsEl = document.getElementById('stats');
 const outputEl = document.getElementById('output');
 const paginationEl = document.getElementById('pagination');
 const dropdownEl = document.getElementById('fileDropdown');
 
-/* TOAST */
-function showToast(message, color='#333'){
-  const t=document.getElementById('toast');
-  t.textContent=message; t.style.background=color; t.style.opacity='1'; t.style.transform='translateY(0)';
-  setTimeout(()=>{t.style.opacity='0';t.style.transform='translateY(20px)';},4000);
-}
+/* ===== Toast ===== */
+function showToast(msg, color='#333'){const t=document.getElementById('toast');t.textContent=msg;t.style.background=color;t.style.opacity='1';t.style.transform='translateY(0)';setTimeout(()=>{t.style.opacity='0';t.style.transform='translateY(20px)';},3500);}
 
-/* STORAGE */
+/* ===== Penyimpanan ===== */
 function getStorageKey(){return 'appData_'+(dropdownEl.value||'default');}
 function saveAppData(){
-  localStorage.setItem(getStorageKey(),JSON.stringify({inputList:inputLinksEl.value,currentPage}));
+  const key=getStorageKey();
+  const data={inputList:inputLinksEl.value,habisList:inputHabisEl.value,currentPage};
+  localStorage.setItem(key,JSON.stringify(data));
 }
 function loadAppData(){
-  const d=JSON.parse(localStorage.getItem(getStorageKey())||'{}');
-  if(d.inputList)inputLinksEl.value=d.inputList; currentPage=d.currentPage||1;
+  const key=getStorageKey();
+  const data=JSON.parse(localStorage.getItem(key)||'{}');
+  inputLinksEl.value=data.inputList||''; 
+  inputHabisEl.value=data.habisList||'';
+  currentPage=data.currentPage||1;
 }
 
-/* INIT */
-window.addEventListener('load',()=>{
-  const saved=localStorage.getItem('selectedFile');
-  if(saved)dropdownEl.value=saved;
-  loadAppData(); processLinks(); showPage(currentPage); setTimeout(checkForUpdates,2000);
-});
-dropdownEl.addEventListener('change',()=>{
-  localStorage.setItem('selectedFile',dropdownEl.value);
-  loadAppData(); processLinks(); showPage(currentPage); checkForUpdates();
-});
-
-/* INPUT ACTIONS */
-inputLinksEl.addEventListener('input',()=>{processLinks();saveAppData();});
-document.getElementById('clearInputLinksBtn').onclick=()=>{inputLinksEl.value='';saveAppData();processLinks();showToast('Input dikosongkan','#b36b00');};
-document.getElementById('copyInputLinksBtn').onclick=()=>{const t=inputLinksEl.value.trim();if(!t)return showToast('Input kosong!','#cc0000');navigator.clipboard.writeText(t).then(()=>showToast('✅ Input disalin!','#008000'));};
-document.getElementById('hapusDuplikatBtn').onclick=()=>{const l=inputLinksEl.value.split('\n').map(a=>a.trim()).filter(Boolean);const u=[...new Set(l)];inputLinksEl.value=u.join('\n');processLinks();saveAppData();showToast('✅ Duplikat dihapus!','#008000');};
-document.getElementById('sortirPerTokoBtn').onclick=()=>{
-  const lines=inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
-  const tokoMap=new Map();
-  for(const link of lines){const m=link.match(/product\/(\d+)\/(\d+)/);if(m){const s=m[1];if(!tokoMap.has(s))tokoMap.set(s,link);}}
-  const hasil=[...tokoMap.values()];inputLinksEl.value=hasil.join('\n');processLinks();saveAppData();showToast(`✅ Sortir selesai!\nTotal toko unik: ${hasil.length}`,'#008000');
-};
-
-/* 🆕 FILTER PRODUK HABIS */
-document.getElementById('hapusProdukHabisBtn').onclick=()=>{
-  const habis=document.getElementById('produkHabis').value.split('\n').map(l=>l.trim()).filter(Boolean);
-  if(!habis.length)return showToast('Tidak ada link produk habis!','#cc0000');
-  let daftar=inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
-  const sebelum=daftar.length;
-  daftar=daftar.filter(l=>!habis.includes(l));
-  const terhapus=sebelum-daftar.length;
-  inputLinksEl.value=daftar.join('\n');
-  processLinks(); saveAppData();
-  showToast(`🚫 ${terhapus} produk habis dihapus dari daftar.`, terhapus?'#b36b00':'#333');
-};
-document.getElementById('clearProdukHabisBtn').onclick=()=>{
-  document.getElementById('produkHabis').value='';
-  showToast('Input produk habis dikosongkan.','#b36b00');
-};
-
-/* LINK HANDLING */
+/* ===== Proses Data ===== */
 function processLinks(){
-  const raw=inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
-  const unique=[...new Set(raw)]; const dup=raw.length-unique.length;
-  allPages=[]; for(let i=0;i<unique.length;i+=MAX_PER_PAGE){allPages.push(unique.slice(i,i+MAX_PER_PAGE));}
-  if(currentPage>allPages.length)currentPage=1;
-  statsEl.textContent=`Total link: ${raw.length}\nLink unik: ${unique.length}\nDuplikat: ${dup}\nHalaman: ${allPages.length}`;
+  const raw=inputLinksEl.value.split('\n').map(x=>x.trim()).filter(Boolean);
+  const habisRaw=inputHabisEl.value.split('\n').map(x=>x.trim()).filter(Boolean);
+  habisLinks=habisRaw;
+  const unique=[...new Set(raw)];
+  const dup=raw.length-unique.length;
+
+  const normal=[], habis=[];
+  for(let link of unique){
+    if(habisRaw.some(h=>h===link)) habis.push(link);
+    else normal.push(link);
+  }
+
+  allPages=[]; habisPages=[];
+  for(let i=0;i<normal.length;i+=MAX_PER_PAGE) allPages.push(normal.slice(i,i+MAX_PER_PAGE));
+  for(let i=0;i<habis.length;i+=MAX_PER_PAGE) habisPages.push(habis.slice(i,i+MAX_PER_PAGE));
+
+  renderStats(raw.length,unique.length,dup,habis.length);
   renderPagination();
+  if(currentPage>allPages.length+habisPages.length) currentPage=1;
+  showPage(currentPage);
 }
-function showPage(p){
-  if(!allPages.length){outputEl.style.display='none';return;}
-  currentPage=p; const fileNow=dropdownEl.value||'default.txt';
-  outputEl.innerHTML=allPages[p-1].map(l=>{
-    const r=`https://niddumulu.github.io/shope-tools/lapor/index.html?link=${encodeURIComponent(l)}&file=${encodeURIComponent(fileNow)}`;
-    return `<div class="link-item"><a class="link" href="${l}" target="_blank">${l}</a><a class="report" href="${r}" target="_blank">Laporkan</a></div>`;
+function renderStats(total,uniq,dup,habisCount=0){
+  statsEl.textContent=`Total link diinput: ${total}
+Link unik: ${uniq}
+Duplikat dihapus: ${dup}
+Produk habis: ${habisCount}
+Total halaman: ${allPages.length+habisPages.length}`;
+}
+
+/* ===== Tampilkan Halaman ===== */
+function showPage(page){
+  let data,isHabis=false;
+  if(page<=allPages.length) data=allPages[page-1];
+  else{data=habisPages[page-allPages.length-1];isHabis=true;}
+  if(!data){outputEl.style.display='none';return;}
+
+  const fileNow=dropdownEl.value||'default.txt';
+  outputEl.innerHTML=data.map(l=>{
+    const rUrl=`https://niddumulu.github.io/shope-tools/lapor/index.html?link=${encodeURIComponent(l)}&file=${encodeURIComponent(fileNow)}`;
+    return `<div class="link-item${isHabis?' habis':''}">
+              <a class="link" href="${l}" target="_blank">${l}</a>
+              ${isHabis?'<span style="color:#cc0000;font-weight:bold;">(Habis)</span>':''}
+              <a class="report" href="${rUrl}" target="_blank">Laporkan</a>
+            </div>`;
   }).join('');
-  outputEl.style.display='block'; highlightActivePage(); saveAppData();
+  outputEl.style.display='block';
+  currentPage=page;
+  highlightActivePage();
+  saveAppData();
 }
 function renderPagination(){
-  paginationEl.innerHTML=''; for(let i=1;i<=allPages.length;i++){const b=document.createElement('button');b.textContent=i;b.className='page-btn';if(i===currentPage)b.classList.add('active');b.onclick=()=>showPage(i);paginationEl.appendChild(b);}
-}
-function highlightActivePage(){document.querySelectorAll('.page-btn').forEach((b,i)=>b.classList.toggle('active',i+1===currentPage));}
-function copyToClipboard(){if(!allPages.length)return showToast('Tidak ada link!','#cc0000');navigator.clipboard.writeText(allPages[currentPage-1].join('\n')).then(()=>showToast('✅ Link disalin!','#008000'));}
-
-/* BACKUP IMPORT RESET */
-function exportLocalStorage(){const d={};for(let i=0;i<localStorage.length;i++){const k=localStorage.key(i);d[k]=localStorage.getItem(k);}const blob=new Blob([JSON.stringify(d,null,2)],{type:'application/json'});const url=URL.createObjectURL(blob);const a=document.createElement('a');a.href=url;a.download='madgazan_backup.json';a.click();URL.revokeObjectURL(url);showToast('✅ Data dibackup','#008000');}
-function importLocalStorage(){const f=document.getElementById('importFile').files[0];if(!f)return showToast('Pilih file JSON dulu.','#cc0000');const r=new FileReader();r.onload=e=>{try{const d=JSON.parse(e.target.result);for(const k in d)localStorage.setItem(k,d[k]);showToast('✅ Import berhasil, reload...','#008000');setTimeout(()=>location.reload(),1500);}catch(err){showToast('❌ File tidak valid','#cc0000');}};r.readAsText(f);}
-function resetLocalStorage(){if(confirm('Yakin hapus semua data?')){localStorage.clear();showToast('Semua data dihapus.','#b36b00');setTimeout(()=>location.reload(),1000);}}
-
-/* SYNC */
-async function syncAllFiles(){
-  const opts=[...dropdownEl.options].filter(o=>o.value);
-  if(!opts.length)return showToast('Tidak ada file di dropdown.','#cc0000');
-  let ok=0,fail=0,lastFile='',lastText='';
-  for(const o of opts){
-    try{const r=await fetch(o.value+'?t='+Date.now(),{cache:'no-store'});if(!r.ok)throw new Error('HTTP '+r.status);
-      const t=await r.text();localStorage.setItem('appData_'+o.value,JSON.stringify({inputList:t.trim(),currentPage:1}));
-      ok++;lastFile=o.value;lastText=t.trim();
-    }catch(e){fail++;}
+  paginationEl.innerHTML='';
+  for(let i=1;i<=allPages.length;i++){
+    const b=document.createElement('button');
+    b.textContent=i; b.className='page-btn';
+    if(i===currentPage) b.classList.add('active');
+    b.onclick=()=>showPage(i);
+    paginationEl.appendChild(b);
   }
-  if(lastText){inputLinksEl.value=lastText;dropdownEl.value=lastFile;localStorage.setItem('selectedFile',lastFile);processLinks();showPage(1);}
-  showToast(`Sinkron selesai\nOK:${ok}\nFail:${fail}\nTerakhir:${lastFile}`,fail?'#b36b00':'#008000');
+  for(let i=1;i<=habisPages.length;i++){
+    const b=document.createElement('button');
+    b.textContent='Habis '+i; b.className='page-btn';
+    if(allPages.length+i===currentPage) b.classList.add('active');
+    b.onclick=()=>showPage(allPages.length+i);
+    paginationEl.appendChild(b);
+  }
 }
-document.getElementById('syncAllBtn').onclick=syncAllFiles;
-document.getElementById('ambilFileListLinksBtn').onclick=syncAllFiles;
+function highlightActivePage(){
+  document.querySelectorAll('.page-btn').forEach((b,i)=>b.classList.toggle('active',i+1===currentPage));
+}
 
-/* UPDATE CHECK */
-async function checkForUpdates(){
-  const f=dropdownEl.value, n=document.getElementById('updateNotice'); if(!f){n.textContent='';return;}
-  const name=f.split('/').pop(); n.textContent=`⏳ Memeriksa versi "${name}"...`; n.style.color='#666';
-  try{
-    const r=await fetch(f+'?check='+Date.now(),{cache:'no-store'});if(!r.ok)throw new Error();
-    const s=(await r.text()).trim(); const l=JSON.parse(localStorage.getItem('appData_'+f)||'{}');
-    if(s!==(l.inputList||'').trim()){n.textContent=`⚠️ Data lokal "${name}" berbeda!`;n.style.color='#b30000';}
-    else{n.textContent=`✅ "${name}" sudah terbaru.`;n.style.color='#008000';setTimeout(()=>n.textContent='',5000);}
-  }catch{n.textContent=`❌ Tidak bisa
+/* ===== Tombol Dasar ===== */
+document.getElementById('clearInputLinksBtn').onclick=()=>{inputLinksEl.value='';processLinks();saveAppData();showToast('Input dikosongkan','#b36b00');};
+document.getElementById('copyInputLinksBtn').onclick=()=>{if(!inputLinksEl.value)return showToast('Input kosong!','#c00');navigator.clipboard.writeText(inputLinksEl.value.trim());showToast('✅ Input disalin!','#080');};
+document.getElementById('hapusDuplikatBtn').onclick=()=>{const l=[...new Set(inputLinksEl.value.split('\n').map(x=>x.trim()).filter(Boolean))];inputLinksEl.value=l.join('\n');processLinks();saveAppData();showToast('✅ Duplikat dihapus!','#080');};
+document.getElementById('sortirPerTokoBtn').onclick=()=>{const lines=inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);const toko=new Map();for(let link of lines){const m=link.match(/product\/(\d+)\//);if(m&&!toko.has(m[1]))toko.set(m[1],link);}inputLinksEl.value=Array.from(toko.values()).join('\n');processLinks();saveAppData();showToast('✅ Sortir selesai!','#080');};
+
+/* ===== Tombol Produk Habis ===== */
+document.getElementById('updateHabisBtn').onclick=()=>{processLinks();saveAppData();showToast('✅ Filter produk habis diterapkan!','#080');};
+document.getElementById('clearHabisBtn').onclick=()=>{inputHabisEl.value='';processLinks();saveAppData();showToast('Daftar produk habis dikosongkan.','#b36b00');};
+
+/* ===== Copy Halaman ===== */
+function copyToClipboard(){
+  let data;
+  if(currentPage<=allPages.length)data=allPages[currentPage-1];
+  else data=habisPages[currentPage-allPages.length-1];
+  if(!data)return showToast('Tidak ada link!','#c00');
+  navigator.clipboard.writeText(data.join('\n')).then(()=>showToast('✅ Disalin!','#080'));
+}
+
+/* ===== Load Awal ===== */
+window.addEventListener('load',()=>{loadAppData();processLinks();});
+
+/* ===== Dropdown Sinkron tetap berfungsi (tanpa ubah fungsi lain) ===== */
+dropdownEl.addEventListener('change',()=>{saveAppData();processLinks();});
+</script>
+</body>
+</html>
