--- a/gabung/v1pisah.html
+++ b/gabung/v1pisah.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Produk Live MadGazan</title>
+<title>Produk Live MadGazan - Filter Manual</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>Produk Live MadGazan 8 November 2025</h1>
-<h2>Manajemen Shopee Live V7</h2>
+<h2>Manajemen Shopee Live V8 (Filter Produk Manual)</h2>
 
+<!-- Input link utama -->
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
 <div class="input-buttons">
@@ -18,6 +19,14 @@
   <button id="copyInputLinksBtn">Copy Input Links</button>
   <button id="hapusDuplikatBtn">Hapus Duplikat</button>
   <button id="sortirPerTokoBtn">Sortir Berdasarkan Toko</button>
+</div>
+
+<!-- Input manual link produk habis -->
+<h3>Filter Produk Habis (Manual)</h3>
+<textarea id="inputHabis" placeholder="Masukkan link produk habis, satu per baris..."></textarea>
+<div class="input-buttons">
+  <button id="clearHabisBtn">Clear Produk Habis</button>
+  <button id="copyHabisBtn">Copy Produk Habis</button>
 </div>
 
 <h3>Daftar File TXT Produk</h3>
@@ -29,20 +38,25 @@
   <option value="rini.txt">rini.txt</option>
   <option value="nurbad.txt">nurbad.txt</option>
 </select>
-<div id="updateNotice"></div>
+
+<div id="updateNotice" style="margin:10px 0; font-weight:bold;"></div>
 <div class="input-buttons">
   <button id="ambilFileListLinksBtn">Download Terbaru Masal</button>
 </div>
 
 <div class="sponsor">
-  Disponsori oleh <strong>MadGazan Studio</strong><br>
+  Disponsori oleh <strong>MadGazan Studio</strong>
 </div>
 
 <div id="stats"></div>
 
-<h3>Output (Produk Siap Live)</h3>
+<h3>Output Produk Tersedia</h3>
 <div id="output"></div>
 <button id="copyBtn">Copy Link di Halaman Ini</button>
+
+<h3>Output Produk Habis</h3>
+<div id="outputHabis"></div>
+<button id="copyHabisBtn">Copy Link Habis</button>
 
 <div class="pagination" id="pagination"></div>
 
@@ -53,8 +67,8 @@
     <input type="file" id="importFile" accept=".json">
     <button id="importBtn">Import Data</button>
   </div>
-  <button id="resetBtn" class="danger-btn">❌ Hapus Semua Data LocalStorage</button>
-  <button id="syncAllBtn" class="success-btn">🔄 Singkron Semua File TXT</button>
+  <button id="resetBtn" style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;">❌ Hapus Semua Data LocalStorage</button>
+  <button id="syncAllBtn" style="margin-top:15px; background:#d0ffd0; border-color:#00aa00;">🔄 Sinkron Semua File TXT</button>
 </div>
 
 <footer>
@@ -62,7 +76,6 @@
 </footer>
 
 <div id="toast"></div>
-
-<script src="appv1pisah.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
