--- a/tampilkan.html
+++ b/tampilkan.html
@@ -131,12 +131,15 @@
     // Daftar file HTML di proyek
     const links = [
       { name: "Produk Run Saat Ini", file: "gabung/index.html" },
-      { name: "Sortir Toko (Produk Live MadGazan)", file: "sortir/index.html" },
+      { name: "Sortir ID Produk", file: "sortir/v3.html" },
       { name: "Laporan Kendala", file: "lapor/index.html" },
       { name: "Ambil URL Affiliate", file: "read/geturl.html" },
       { name: "Total Komisi Affiliate", file: "read/totalkomisi.html" },
       { name: "Oktober", file: "oktober/index.html" },
       { name: "Oktober1", file: "oktober1/index.html" }
+      { name: "Detek Duplikat", file: "duplikat.html" }
+      { name: "CSV Riset Upload", file: "read/index.html" }
+      { name: "Editor Github", file: "read/h.html" }
     ];
 
     const ul = document.getElementById("daftarIsi");
