--- a/tampilkan.html
+++ b/tampilkan.html
@@ -136,10 +136,10 @@
       { name: "Ambil URL Affiliate", file: "read/geturl.html" },
       { name: "Total Komisi Affiliate", file: "read/totalkomisi.html" },
       { name: "Oktober", file: "oktober/index.html" },
-      { name: "Oktober1", file: "oktober1/index.html" }
-      { name: "Detek Duplikat", file: "duplikat.html" }
-      { name: "CSV Riset Upload", file: "read/index.html" }
-      { name: "Editor Github", file: "read/h.html" }
+      { name: "Oktober1", file: "oktober1/index.html" },
+      { name: "Detek Duplikat", file: "duplikat.html" },
+      { name: "CSV Riset Upload", file: "read/index.html" },
+      { name: "Editor Github", file: "read/h.html" },
     ];
 
     const ul = document.getElementById("daftarIsi");
